Copyright 1998-2018 Gerald Combs <gerald@wireshark.org> and contributors.
License GPLv2+: GNU GPL version 2 or later <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
Compiled (64-bit) with Qt 5.3.2, with libpcap, without POSIX capabilities, with
GLib 2.36.0, with zlib 1.2.5, with SMI 0.4.8, with c-ares 1.12.0, with Lua
5.2.4, with GnuTLS 3.4.17, with Gcrypt 1.7.7, with MIT Kerberos, with MaxMind DB
resolver, with nghttp2 1.21.0, with LZ4, with Snappy, with libxml2 2.9.4, with
QtMultimedia, with SBC, with SpanDSP, with bcg729.
Running on Mac OS X 10.11.6, build 15G22010 (Darwin 15.6.0), with Intel(R)
Core(TM) i5-4278U CPU @ 2.60GHz (with SSE4.2), with 8192 MB of physical memory,
with locale en_US.UTF-8, with libpcap version 1.5.3 - Apple version 54, with
GnuTLS 3.4.17, with Gcrypt 1.7.7, with zlib 1.2.5, binary plugins supported (0
loaded).
Built using llvm-gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build
2336.9.00).
When viewing TLS message trace in Wireshark GUI, the Heartbeat message is displayed without a comma separator in the "Info" column:"Client Key ExchangeHeartbeat Request, Change Cipher Spec, Encrypted Handshake Message"Expected behavior:"Client Key Exchange, Heartbeat Request, Change Cipher Spec, Encrypted Handshake Message"Attached is a PCAP file to reproduce the problem.