SSL: use col_append_sep_str() to add heartbeat to info column

Bug: 15079
Change-Id: I97e5179f1385d24b38a0537a91bc73a9eb3a241b
Reviewed-on: https://code.wireshark.org/review/29299
Petri-Dish: Pascal Quantin <pascal.quantin@gmail.com>
Reviewed-by: Alexis La Goutte <alexis.lagoutte@gmail.com>
Tested-by: Petri Dish Buildbot
Reviewed-by: Pascal Quantin <pascal.quantin@gmail.com>
(cherry picked from commit 281936a5bed109f3ed4287d8d14ab410629f00f4)
Reviewed-on: https://code.wireshark.org/review/29302